# trvdos

./: .gitignore  .pylintrc  .readthedocs.yaml  .run-NVE_test.trr_offsets.npz  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_old.md  compile.sh  dropbox-links.txt  jacobi  jacobi-test.nb  jacobi.c  pyproject.toml  readthedocs.yaml  run.ipynb  run.py  trans+rot+vib.ipynb  vdos.c  vdos.ipynb  vdos.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
mda_3d_2pt/: __init__.py  vdos.py
mda_3d_2pt/data/: .run-NVE_test.trr_offsets.npz
old/: debug.txt  test.ipynb  test.nb  trans+rot+vib copy.ipynb  trans+rot.ipynb  trans.ipynb
trvdos/: __init__.py  vdos.py
trvdos/_lib/: .nfs00000029836e5436000004f2
trvdos/data/: .run-NVE_test.trr_offsets.npz  files.py  run-NVE.tpr
trvdos/tests/: conftest.py  test_trvdos.py
trvdos/tests/expected_outputs/: vdos_1step.pkl  vdos_fulltraj.pkl
