[build-system]
requires = [
    "scikit-build-core>=0.8",
    "cmake>=3.20",
    "ninja"
]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
cmake.build-type = "Release"

# IMPORTANT: ensures build artifacts are placed where Python can see them
build-dir = "build/{wheel_tag}"

# ensures editable installs behave like normal installs
editable.rebuild = true

[project]
name = "trvdos"
description = "Development of 3D-2PT package for MDAnalysis (with compatibility for complex solvent molecules)"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]

authors = [
    {name = "Matthias Heyden", email = "mheyden1@asu.edu"},
]
maintainers = [
    {name = "Matthias Heyden", email = "mheyden1@asu.edu"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/HeydenLabASU/mda_3d_2pt"
# documentation = "https://mda_3d_2pt.readthedocs.io"

[tool.setuptools.packages.find]
include = ["trvdos*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "trvdos/tests",
]

[tool.black]
line-length = 80

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.vcs]
method = "git"
# the below line expects tags to look like '1.0.2'.
# if prefixing with a v, e.g. 'v1.0.2', change it to ["v*"]
match = ["*"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.coverage.run]
omit = [
    # Omit the tests
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.yapf]
COLUMN_LIMIT = 80
INDENT_WIDTH = 4
USE_TABS = false
